--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,16 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install black pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Lint with black
+      run: |
+        # Code formatting with black, check every python file in the src directory 
+        black src
+        black --check src
+     # Task for testing with pytest
+    - name: Test with pytest
+      env:
+     # Uses the JWT_SECRET_KEY env variable from the Github actions secrets
+        JWT_SECRET_KEY : ${{ secrets.JWT_SECRET_KEY }}
+      run: |
+        pytest
 
